# exmox-moon-robot-api

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: ce88e337e621_add_obstacles_table_and_update_command_.py  d2d102a41f6b_add_robot_and_command_history_tables.py
app/: __init__.py  main.py
app/api/v1/routes/: health.py  robot.py
app/core/: __init__.py  config.py  logging_config.py
app/db/: __init__.py  session.py
app/db/models/: __init__.py  command_history.py  obstacle.py  robot.py
app/repositories/: command_history_repository.py  obstacle_repository.py  robot_repository.py
app/schemas/: robot_schema.py
app/services/: obstacle_service.py  robot_service.py
app/utils/: enums.py
tests/: conftest.py  test_obstacles.py  test_robot_api.py  test_robot_service.py
